# HeadFirstDesignPatterns

./: .gitignore  README.md
Ch1-Strategy/: CMakeLists.txt  duck.h  duck_fly.h  duck_quack.h  main.cpp
Ch10-State/: CMakeLists.txt  gumball.cpp  gumball.h  main.cpp
Ch11-Proxy/: CMakeLists.txt  README.md  filedownloader.cpp  filedownloader.h  imageproxy.cpp  imageproxy.h  imageviewer.cpp  imageviewer.h  imageviewer.ui
Ch12-Combine/: CMakeLists.txt  adapters.cpp  adapters.h  composite.cpp  composite.h  decorators.cpp  decorators.h  ducks.cpp  ducks.h  factories.cpp  factories.h  geese.cpp  geese.h  interfaces.cpp  interfaces.h  main.cpp  observables.cpp  observables.h  observers.cpp  observers.h
Ch12-Compound/: CMakeLists.txt  README.md  beatcontrol.cpp  beatcontrol.h  beatcontrol.ui  beatmodel.cpp  beatmodel.h  beatview.cpp  beatview.h  beatview.ui  controllers.cpp  controllers.h  djview.cpp  djview.h  interfaces.h  main.cpp  tonegenerator.cpp  tonegenerator.h
Ch2-Observer/: CMakeLists.txt  main.cpp  obsinterfaces.h  weatherdata.cpp  weatherdata.h  weatherdisplay.cpp  weatherdisplay.h
Ch3-Decorator/BookVersion/: CMakeLists.txt  beverage.cpp  beverage.h  condiments.cpp  condiments.h  drinks.cpp  drinks.h
Ch3-Decorator/MyVersion/: README.md  beverage.cpp  beverage.h  condiments.cpp  condiments.h  drinks.cpp  drinks.h  main.cpp
Ch4-Factory/V1/: CMakeLists.txt  main.cpp  pizza.cpp  pizza.h  pizzastore.cpp  pizzastore.h
Ch4-Factory/V2/: CMakeLists.txt  cheese.cpp  cheese.h  clams.cpp  clams.h  doughs.cpp  doughs.h  ingredfactories.cpp  ingredfactories.h  main.cpp  pepperoni.cpp  pepperoni.h  pizza.cpp  pizza.h  pizzastore.cpp  pizzastore.h  sauces.cpp  sauces.h  veggies.cpp  veggies.h
Ch5-Singleton/: CMakeLists.txt  chocoboiler.cpp  chocoboiler.h  main.cpp
Ch6-Command/ComplexRemote/: CMakeLists.txt  appliances.cpp  appliances.h  complexremote.cpp  complexremote.h  main.cpp
Ch6-Command/SimpleRemote/: CMakeLists.txt  command.cpp  command.h  main.cpp  simpleremote.cpp  simpleremote.h
Ch7-Adapter/: CMakeLists.txt  adapters.cpp  adapters.h  ducks.cpp  ducks.h  interfaces.h  main.cpp  turkeys.cpp  turkeys.h
Ch8-Template/: CMakeLists.txt  CaffeineBeverages.cpp  CaffeineBeverages.h  main.cpp
Ch9-Composite/: CMakeLists.txt  main.cpp  menu.cpp  menu.h  waitress.h
Ch9-Iterator/: CMakeLists.txt  main.cpp  menus.cpp  menus.h  waitress.cpp  waitress.h
